# OpenFOAM_nozzle

./: Dockerfile  README.md  pyproject.toml
base/case/0/: p.py
base/config_loader/: nozzle_config.py  simulation_config.py
base/nozzle/: nozzle.py  parabolic_nozzle.py
base/preparation/: case_structure.py
base/templates/openfoam/: block_mesh.py  fv_solution.py
base/templates/openfoam/constant/: thermophysical_properties.py  transport_properties.py  turbulence_properties.py
base/templates/openfoam/system/: block_mesh.py  control_dict.py  fv_schemes.py
base/utils/: __init__.py  foam.py
config/: nozzle_params.yaml  simulation_config.yaml
notebooks/: nozzle.ipynb
