[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openfoam-nozzle"
version = "0.1.0"
description = ""
authors = ["Arek Drabik <arek.drabik1453@gmail.com>"]
readme = "README.md"
packages = [{include = "base"}]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.4.1"
matplotlib = "^3.10.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

